# yt-all-distract-list

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: sync.yml  validate.yml
data/: MAINTENANCE.md  candidates.json  supplement.txt  upstream-selectors.snapshot.json
docs/: DEVELOPMENT.md  IMPLEMENTATION-STATUS.md  compatibility-notes.md
docs/superpowers/plans/: 2026-06-06-conservative-extraction-and-maintenance-reporting.md  2026-06-06-lockedin-youtube-filter.md  2026-06-06-search-content-renderer-protection.md
docs/superpowers/specs/: 2026-06-06-conservative-extraction-and-maintenance-reporting-design.md  2026-06-06-lockedin-youtube-filter-design.md  2026-06-06-search-content-renderer-protection-design.md
lockedin_filters/: __init__.py  build.py  extract.py  lint.py  report.py  textrules.py
tests/: test_build.py  test_extract.py  test_lint.py  test_report.py  test_supplement.py  test_textrules.py
