[project]
name = "yt-all-distract-list"
version = "0.1.0"
description = "Self-updating maximalist YouTube distraction filter list for uBlock Origin and AdGuard"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
